@@ -89,6 +89,13 @@
     <div id="right">
         <div id="news">
 	    <h2 class="">News</h2>
+	    <h3>December 15, 2008</h3>
+	      <b>Unstable</b> version 2.25.3 released.<br />
+	      <ul>
+	      <li>Show windows that are part of viewport that is currently not visible</li>
+	      </ul>
+	      <a href="download.html">Download it</a>
+	    
 	    <h3>December 2, 2008</h3>
 	      <b>Unstable</b> version 2.25.2 released.<br />
 	      <ul>
