@@ -1,3 +1,9 @@
+2008-12-15	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.25.3 release
+
 2008-12-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
